src/main/java/org/sainm/shp/antlr/bashParser.java
// Generated from D:/github/shp/src/main/resources/org/sainm/shp/antlr/bashParser.g4 by ANTLR 4.13.1
package org.sainm.shp.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class bashParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BUILTIN=1, COMMAND=2, EXEC=3, NOCORRECT=4, NOGLOB=5, COPROC=6, IF=7, THEN=8, 
		ELIF=9, ELSE=10, FI=11, FOR=12, IN=13, DO=14, DONE=15, WHILE=16, UNTIL=17, 
		REPEAT=18, CASE=19, ESAC=20, SELECT=21, ALWAYS=22, FUNCTION=23, DECIMAL_LITERAL=24, 
		HEX_LITERAL=25, OCT_LITERAL=26, BINARY_LITERAL=27, HASH_LITERAL=28, BRACKET_LITERAL=29, 
		FLOAT_LITERAL=30, BOOL_LITERAL=31, CHAR_LITERAL=32, SUBSTITUTION_QUOTING=33, 
		NULL_LITERAL=34, LPAREN=35, RPAREN=36, LBRACE=37, RBRACE=38, LBRACK=39, 
		RBRACK=40, SEMI=41, COMMA=42, DOT=43, DOLLER=44, ASSIGN=45, GT=46, LT=47, 
		BANG=48, TILDE=49, QUESTION=50, COLON=51, EQUAL=52, LE=53, GE=54, NOTEQUAL=55, 
		AND=56, OR=57, INC=58, DEC=59, ADD=60, SUB=61, MUL=62, DIV=63, BITAND=64, 
		BITOR=65, CARET=66, MOD=67, ADD_ASSIGN=68, SUB_ASSIGN=69, MUL_ASSIGN=70, 
		DIV_ASSIGN=71, AND_ASSIGN=72, OR_ASSIGN=73, XOR_ASSIGN=74, MOD_ASSIGN=75, 
		LSHIFT_ASSIGN=76, RSHIFT_ASSIGN=77, URSHIFT_ASSIGN=78, ARROW=79, COLONCOLON=80, 
		AT=81, ELLIPSIS=82, NL=83, WS=84, COMMENT=85, LINE_COMMENT=86, IDENTIFIER=87, 
		VARIABLE_REFERENCE=88, SUBSHELL=89, ARITHMETIC_OPEN=90, ARITHMETIC_CLOSE=91, 
		ESCAPES=92, STRING_CHARACTERS=93, END_QUOTED_STRING=94, RT=95;
	public static final int
		RULE_script = 0, RULE_simpleOrComplexCommand = 1, RULE_simpleCommand = 2, 
		RULE_pipeline = 3, RULE_sublist = 4, RULE_pipe = 5, RULE_sublistJoiner = 6, 
		RULE_list = 7, RULE_listWithOptionalTerminator = 8, RULE_listTerminator = 9, 
		RULE_listTerminatorWait = 10, RULE_listTerminatorBackground = 11, RULE_complexCommands = 12, 
		RULE_ifThenFi = 13, RULE_ifElifElse = 14, RULE_ifSingular = 15, RULE_forInDoDone = 16, 
		RULE_forLiteralsDoDone = 17, RULE_whileDoDone = 18, RULE_untilDoDone = 19, 
		RULE_repeatDoDone = 20, RULE_caseInEsac = 21, RULE_selectDoDone = 22, 
		RULE_casePattern = 23, RULE_caseTerminator = 24, RULE_forkProcess = 25, 
		RULE_codeblock = 26, RULE_tryAlways = 27, RULE_functionDeclaration = 28, 
		RULE_simpleFunctionListDeclaration = 29, RULE_simpleFunctionSingleDeclaration = 30, 
		RULE_conditional = 31, RULE_conditionalExpression = 32, RULE_expression = 33, 
		RULE_commandModifier = 34, RULE_identifier = 35, RULE_literal = 36, RULE_commandSubstitutionLiteral = 37, 
		RULE_arithmeticLiteral = 38, RULE_integerLiteral = 39, RULE_floatLiteral = 40, 
		RULE_shortFlagGroup = 41, RULE_longFlagGroup = 42, RULE_shortFlagGroupWithOptionalValue = 43, 
		RULE_longFlagGroupWithOptionalValue = 44, RULE_quotedString = 45, RULE_variableReference = 46, 
		RULE_arithmeticExpression = 47, RULE_arithmeticStatement = 48, RULE_arithmeticModifier = 49, 
		RULE_arithmeticAssignmentOperator = 50, RULE_arithmeticOperator = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "simpleOrComplexCommand", "simpleCommand", "pipeline", "sublist", 
			"pipe", "sublistJoiner", "list", "listWithOptionalTerminator", "listTerminator", 
			"listTerminatorWait", "listTerminatorBackground", "complexCommands", 
			"ifThenFi", "ifElifElse", "ifSingular", "forInDoDone", "forLiteralsDoDone", 
			"whileDoDone", "untilDoDone", "repeatDoDone", "caseInEsac", "selectDoDone", 
			"casePattern", "caseTerminator", "forkProcess", "codeblock", "tryAlways", 
			"functionDeclaration", "simpleFunctionListDeclaration", "simpleFunctionSingleDeclaration", 
			"conditional", "conditionalExpression", "expression", "commandModifier", 
			"identifier", "literal", "commandSubstitutionLiteral", "arithmeticLiteral", 
			"integerLiteral", "floatLiteral", "shortFlagGroup", "longFlagGroup", 
			"shortFlagGroupWithOptionalValue", "longFlagGroupWithOptionalValue", 
			"quotedString", "variableReference", "arithmeticExpression", "arithmeticStatement", 
			"arithmeticModifier", "arithmeticAssignmentOperator", "arithmeticOperator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'builtin'", "'command'", "'exec'", "'nocorrect'", "'noglob'", 
			"'coproc'", "'if'", "'then'", "'elif'", "'else'", "'fi'", "'for'", "'in'", 
			"'do'", "'done'", "'while'", "'until'", "'repeat'", "'case'", "'esac'", 
			"'select'", "'always'", "'function'", null, null, null, null, null, null, 
			null, null, null, null, "'null'", "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "';'", "','", "'.'", "'$'", "'='", "'>'", "'<'", "'!'", "'~'", 
			"'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", 
			"'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'+='", 
			"'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", 
			"'>>>='", "'->'", "'::'", "'@'", "'...'", null, null, null, null, null, 
			null, "'$('", "'$(('", "'))'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BUILTIN", "COMMAND", "EXEC", "NOCORRECT", "NOGLOB", "COPROC", 
			"IF", "THEN", "ELIF", "ELSE", "FI", "FOR", "IN", "DO", "DONE", "WHILE", 
			"UNTIL", "REPEAT", "CASE", "ESAC", "SELECT", "ALWAYS", "FUNCTION", "DECIMAL_LITERAL", 
			"HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "HASH_LITERAL", "BRACKET_LITERAL", 
			"FLOAT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", "SUBSTITUTION_QUOTING", 
			"NULL_LITERAL", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
			"SEMI", "COMMA", "DOT", "DOLLER", "ASSIGN", "GT", "LT", "BANG", "TILDE", 
			"QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", "INC", 
			"DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", "CARET", "MOD", 
			"ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", 
			"OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", 
			"URSHIFT_ASSIGN", "ARROW", "COLONCOLON", "AT", "ELLIPSIS", "NL", "WS", 
			"COMMENT", "LINE_COMMENT", "IDENTIFIER", "VARIABLE_REFERENCE", "SUBSHELL", 
			"ARITHMETIC_OPEN", "ARITHMETIC_CLOSE", "ESCAPES", "STRING_CHARACTERS", 
			"END_QUOTED_STRING", "RT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "bashParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public bashParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public ListWithOptionalTerminatorContext listWithOptionalTerminator() {
			return getRuleContext(ListWithOptionalTerminatorContext.class,0);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bashParserVisitor ) return ((bashParserVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			listWithOptionalTerminator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleOrComplexCommandContext extends ParserRuleContext {
		public SimpleCommandContext simpleCommand() {
			return getRuleContext(SimpleCommandContext.class,0);
		}
		public ComplexCommandsContext complexCommands() {
			return getRuleContext(ComplexCommandsContext.class,0);
		}
		public SimpleOrComplexCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleOrComplexCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).enterSimpleOrComplexCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).exitSimpleOrComplexCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bashParserVisitor ) return ((bashParserVisitor<? extends T>)visitor).visitSimpleOrComplexCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleOrComplexCommandContext simpleOrComplexCommand() throws RecognitionException {
		SimpleOrComplexCommandContext _localctx = new SimpleOrComplexCommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_simpleOrComplexCommand);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				simpleCommand();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				complexCommands();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleCommandContext extends ParserRuleContext {
		public LiteralContext commandName;
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public CommandModifierContext commandModifier() {
			return getRuleContext(CommandModifierContext.class,0);
		}
		public List<ShortFlagGroupWithOptionalValueContext> shortFlagGroupWithOptionalValue() {
			return getRuleContexts(ShortFlagGroupWithOptionalValueContext.class);
		}
		public ShortFlagGroupWithOptionalValueContext shortFlagGroupWithOptionalValue(int i) {
			return getRuleContext(ShortFlagGroupWithOptionalValueContext.class,i);
		}
		public List<LongFlagGroupWithOptionalValueContext> longFlagGroupWithOptionalValue() {
			return getRuleContexts(LongFlagGroupWithOptionalValueContext.class);
		}
		public LongFlagGroupWithOptionalValueContext longFlagGroupWithOptionalValue(int i) {
			return getRuleContext(LongFlagGroupWithOptionalValueContext.class,i);
		}
		public SimpleCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).enterSimpleCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).exitSimpleCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bashParserVisitor ) return ((bashParserVisitor<? extends T>)visitor).visitSimpleCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleCommandContext simpleCommand() throws RecognitionException {
		SimpleCommandContext _localctx = new SimpleCommandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(110);
				commandModifier();
				}
				break;
			}
			setState(113);
			((SimpleCommandContext)_localctx).commandName = literal();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2882321388046123070L) != 0) || ((((_la - 87)) & ~0x3f) == 0 && ((1L << (_la - 87)) & 11L) != 0)) {
				{
				setState(117);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(114);
					literal();
					}
					break;
				case 2:
					{
					setState(115);
					shortFlagGroupWithOptionalValue();
					}
					break;
				case 3:
					{
					setState(116);
					longFlagGroupWithOptionalValue();
					}
					break;
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PipelineContext extends ParserRuleContext {
		public List<SimpleOrComplexCommandContext> simpleOrComplexCommand() {
			return getRuleContexts(SimpleOrComplexCommandContext.class);
		}
		public SimpleOrComplexCommandContext simpleOrComplexCommand(int i) {
			return getRuleContext(SimpleOrComplexCommandContext.class,i);
		}
		public TerminalNode COPROC() { return getToken(bashParser.COPROC, 0); }
		public List<PipeContext> pipe() {
			return getRuleContexts(PipeContext.class);
		}
		public PipeContext pipe(int i) {
			return getRuleContext(PipeContext.class,i);
		}
		public PipelineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipeline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).enterPipeline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).exitPipeline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bashParserVisitor ) return ((bashParserVisitor<? extends T>)visitor).visitPipeline(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PipelineContext pipeline() throws RecognitionException {
		PipelineContext _localctx = new PipelineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pipeline);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COPROC) {
				{
				setState(122);
				match(COPROC);
				}
			}

			setState(125);
			simpleOrComplexCommand();
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(126);
					pipe();
					setState(127);
					simpleOrComplexCommand();
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SublistContext extends ParserRuleContext {
		public List<PipelineContext> pipeline() {
			return getRuleContexts(PipelineContext.class);
		}
		public PipelineContext pipeline(int i) {
			return getRuleContext(PipelineContext.class,i);
		}
		public List<SublistJoinerContext> sublistJoiner() {
			return getRuleContexts(SublistJoinerContext.class);
		}
		public SublistJoinerContext sublistJoiner(int i) {
			return getRuleContext(SublistJoinerContext.class,i);
		}
		public SublistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sublist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).enterSublist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).exitSublist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bashParserVisitor ) return ((bashParserVisitor<? extends T>)visitor).visitSublist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SublistContext sublist() throws RecognitionException {
		SublistContext _localctx = new SublistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sublist);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			pipeline();
			setState(140);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(135);
					sublistJoiner();
					setState(136);
					pipeline();
					}
					} 
				}
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PipeContext extends ParserRuleContext {
		public PipeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipe; }
	 
		public PipeContext() { }
		public void copyFrom(PipeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PipeStdoutAndStderrToStdinContext extends PipeContext {
		public TerminalNode BITOR() { return getToken(bashParser.BITOR, 0); }
		public TerminalNode BITAND() { return getToken(bashParser.BITAND, 0); }
		public PipeStdoutAndStderrToStdinContext(PipeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).enterPipeStdoutAndStderrToStdin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).exitPipeStdoutAndStderrToStdin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bashParserVisitor ) return ((bashParserVisitor<? extends T>)visitor).visitPipeStdoutAndStderrToStdin(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PipeStdoutToStdinContext extends PipeContext {
		public TerminalNode BITOR() { return getToken(bashParser.BITOR, 0); }
		public PipeStdoutToStdinContext(PipeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).enterPipeStdoutToStdin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).exitPipeStdoutToStdin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bashParserVisitor ) return ((bashParserVisitor<? extends T>)visitor).visitPipeStdoutToStdin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PipeContext pipe() throws RecognitionException {
		PipeContext _localctx = new PipeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pipe);
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new PipeStdoutToStdinContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				match(BITOR);
				}
				break;
			case 2:
				_localctx = new PipeStdoutAndStderrToStdinContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				match(BITOR);
				setState(145);
				match(BITAND);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SublistJoinerContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(bashParser.AND, 0); }
		public TerminalNode OR() { return getToken(bashParser.OR, 0); }
		public SublistJoinerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sublistJoiner; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).enterSublistJoiner(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashParserListener ) ((bashParserListener)listener).exitSublistJoiner(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bashParserVisitor ) return ((bashParserVisitor<? extends T>)visitor).visitSublistJoiner(this);
			else return visitor.visitChildren(this);
		}
	}
